[package]
name = "rusty-runner-api"
description = "This crate serves purely as an REST api abstraction for a remote script execution server."
version = "2.0.0"
edition = "2021"
repository = "https://github.com/meinTest/rusty-remote-runner"
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"

# This folder also bundles an axum web based server for this protocol.
[workspace]
resolver = "2"
members = ["rusty-runner-server"]

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.117"
serde_urlencoded = "0.7.1"


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
