[package]
name = "rusty-runner-server"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["process"] }
rusty-runner-api = { version = "1", path = "../" }
rand = "0.8"
