[package]
name = "rusty-runner-server"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6"
env_logger = { version = "0.11", features = ["unstable-kv"] }
log = { version = "0.4", features = ["kv"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["process"] }
rusty-runner-api = { version = "1", path = "../" }
rand = "0.8"
