[package]
name = "rusty-runner-server"
version = "0.2.1"
edition = "2021"

[lints]
workspace = true

[dependencies]
# -- Internal
rusty-runner-api = { version = "2.0.0", path = "../" }
# -- Async
tokio = { version = "1.37.0", features = ["fs", "process", "signal"] }
# -- Serde
serde = { version = "1.0.202", features = ["derive"]}
# -- Web
axum = "0.7.5"
tower-http = {version = "0.5.2", features = ["fs", "trace"] }
# -- Logging
log = { version = "0.4.21", features = ["kv"] }
env_logger = { version = "0.11.3", features = ["unstable-kv"] }
# -- Util
fastrand = "2.1.0"
# -- CLI
clap = { version = "4.5.4", features = ["derive", "env"] }

[dev-dependencies]
anyhow = "1.0.86"
httpc-test = "0.1.9"
serde_json = "1.0.117"