[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.0"
actix-files = "0.6.2"
env_logger = "0.10.0"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["process"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "serde"] }
rusty-remote-runner = { version = "0.1", path = "../" }
